# RPC_Integration

./: .gitignore  CMakeLists.txt
RPCIA/: CMakeLists.txt  RPCIALinkDef.h  event.cxx  event_builder.cxx  histogram_builder.cxx  histograms.h  hit.cxx  hit.h  tree_builder.cc
RPCIA/ANALYSIS/: CMakeLists.txt  analysis_iterator.cxx  analysis_iterator.h  analysis_manager.cxx  analysis_manager.h  analysis_task.cxx  analysis_task.h  layer_hist.h  summary_hist.h  tdc_analysis_task.cxx  tdc_analysis_task.h
RPCIA/BASE/: BASELinkDef.h  CMakeLists.txt  cluster.cxx  cluster.h  digit.cxx  digit.h  iterator.cxx  iterator.h  loader.cxx  loader.h  log.cxx  log.h  noisy_rollover_counter.cxx  noisy_rollover_counter.h  object_pair.cxx  object_pair.h  store.cxx  store.h  strip.cxx  strip.h  track.cxx  track.h  tree_manager.cxx  tree_manager.h  utils.h
RPCIA/HIST/: CMakeLists.txt  histogram_builder.cxx  histogram_builder.h
RPCIA/MAPPING/: CMakeLists.txt  chamber.cxx  chamber.h  detector.cxx  detector.h  strip.cxx  strip.h  tdc.cxx  tdc.h  tdc_direction_map.cxx  tdc_direction_map.h  tdc_strip_map.cxx  tdc_strip_map.h
RPCIA/RAW/: CMakeLists.txt  packet.cxx  packet.h  packet_buffer.cxx  packet_buffer.h  raw_decoder.cxx  raw_decoder.h  raw_reader.cxx  raw_reader.h  raw_stream.cxx  raw_stream.h
RPCIA/RECON/: CMakeLists.txt  RECONLinkDef.h  cluster_finder.cxx  cluster_finder.h  digit_maker.cxx  digit_maker.h  digit_store.cxx  digit_store.h  reconstructor.cxx  reconstructor.h  tracker.cxx  tracker.h
RPCIA/TASK/: CMakeLists.txt  cluster_size.h  event_display.h  event_hits_on_strip.cxx  event_hits_on_strip.h  example_task.h  extra_hits_on_strip.cxx  extra_hits_on_strip.h  hit_distribution.h  hit_rates.cxx  hit_rates.h  isolate_noise.cxx  isolate_noise.h  muon_distribution.h  muon_timing_distribution.h  noise_distribution.h  simple_task.cxx  simple_task.h  time_difference_from_average.cxx  time_difference_from_average.h  time_difference_vs_distance.cxx  time_difference_vs_distance.h  timing_distribution.h  width_distribution.h
RPCIA/cmake/: CheckCompiler.cmake  CheckGitVersion.cmake  FindROOT.cmake
RPCIA/executables/: CMakeLists.txt  generate_tree.cxx  histograms.h
RPCIA/macros/: NoiseRate.C  ViewHits.C
cmake/: CMakeRPCIA.cmake  RpcIA-config.cmake.in
data/0001/: config.json
include/: event.hpp  event_builder.hpp  linkdef.h  tree_builder.hh
install/etc/: RpcIA-config.cmake
install/include/: event.h  event_builder.h  histogram_builder.h
install/lib/: G__RPCIA_rdict.pcm  libRPCIA.rootmap
source/: CMakeLists.txt  event.cpp  event_builder.cpp  histogram_builder.cpp  hit.cpp
targets/: CMakeLists.txt  generate_tree.cpp  histograms.hpp
